fix header overflow

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -106,3 +106,7 @@ a {
 
 
 }
+
+.wrapper-header {
+  flex-grow: 0;
+}
